--- a/McDonalds case study .ipynb
+++ b/McDonalds case study .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "21b0170f",
+   "id": "107ef51c",
    "metadata": {},
    "source": [
     "# Exploring Data"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2de582ff",
+   "id": "baa4021b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d0f46ff2",
+   "id": "53ddb91b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2ae31c33",
+   "id": "4bb0ff5a",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7ed5e7c0",
+   "id": "806899b3",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "73f58e7d",
+   "id": "928015e4",
    "metadata": {},
    "outputs": [
     {
@@ -306,9 +306,6 @@
     "import pandas as pd\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
-    "# Assuming 'MD_x' is the binary matrix obtained from the previous example\n",
-    "# You can replace it with your actual data\n",
-    "\n",
     "# Perform PCA\n",
     "pca = PCA()\n",
     "MD_pca = pca.fit_transform(MD_x)\n",
@@ -332,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "bec09004",
+   "id": "26ef12bd",
    "metadata": {},
    "outputs": [
     {
@@ -375,9 +372,6 @@
     "import pandas as pd\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
-    "# Assuming 'MD_x' is the binary matrix obtained from the previous example\n",
-    "# You can replace it with your actual data\n",
-    "\n",
     "# Perform PCA\n",
     "pca = PCA()\n",
     "MD_pca = pca.fit_transform(MD_x)\n",
@@ -394,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "51d2aec4",
+   "id": "64d9a670",
    "metadata": {},
    "outputs": [
     {
@@ -422,9 +416,6 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
-    "# Assuming 'MD_x' is the binary matrix obtained from the previous example\n",
-    "# You can replace it with your actual data\n",
-    "\n",
     "# Perform PCA\n",
     "pca = PCA()\n",
     "MD_pca = pca.fit_transform(MD_x)\n",
@@ -446,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c926880a",
+   "id": "6b539611",
    "metadata": {},
    "source": [
     "Principal components analysis of the fast food data set"
@@ -454,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "380e99d9",
+   "id": "024665a9",
    "metadata": {},
    "source": [
     "# Extracting Segments"
@@ -462,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "473eaf7b",
+   "id": "2df15126",
    "metadata": {},
    "source": [
     "### Using k-Means"
@@ -471,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4c65b450",
+   "id": "1f7e8bfe",
    "metadata": {},
    "outputs": [
     {
@@ -648,9 +639,6 @@
     "from sklearn.metrics import silhouette_score\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# Assuming 'MD_x' is the binary matrix obtained from the previous example\n",
-    "# You can replace it with your actual data\n",
-    "\n",
     "# Set seed for reproducibility\n",
     "np.random.seed(1234)\n",
     "\n",
@@ -663,14 +651,14 @@
     "best_model = None\n",
     "best_silhouette_score = -1\n",
     "\n",
-    "# Perform k-means clustering for a range of cluster numbers\n",
+    "#  k-means clustering for a range of cluster numbers\n",
     "for k in range(2, 9):\n",
-    "    for _ in range(10):  # Repeat the clustering 10 times\n",
+    "    for _ in range(10):  # clustering 10 times\n",
     "        kmeans = KMeans(n_clusters=k, random_state=1234)\n",
     "        labels = kmeans.fit_predict(MD_x_standardized)\n",
     "        silhouette_avg = silhouette_score(MD_x_standardized, labels)\n",
     "        \n",
-    "        # Check if this model has a higher silhouette score\n",
+    "        # Checking if this model has a higher silhouette score\n",
     "        if silhouette_avg > best_silhouette_score:\n",
     "            best_silhouette_score = silhouette_avg\n",
     "            best_k = k\n",
@@ -679,8 +667,6 @@
     "# Print the best number of clusters\n",
     "print(\"Best number of clusters:\", best_k)\n",
     "\n",
-    "# 'best_model.labels_' contains the cluster assignments\n",
-    "# You can use these labels as your cluster assignments\n",
     "cluster_assignments = best_model.labels_\n",
     "print(\"Cluster assignments:\", cluster_assignments)\n"
    ]
@@ -688,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6aafecf2",
+   "id": "378dd175",
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ff93c86a",
+   "id": "d3f86cfd",
    "metadata": {},
    "outputs": [
     {
@@ -2481,7 +2467,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "48905f84",
+   "id": "742db4d3",
    "metadata": {},
    "outputs": [
     {
@@ -4082,7 +4068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f360412",
+   "id": "e320f5a9",
    "metadata": {},
    "source": [
     "### Using Mixtures of Distributions"
@@ -4091,7 +4077,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "bb040c94",
+   "id": "d11e2138",
    "metadata": {},
    "outputs": [
     {
@@ -4108,8 +4094,6 @@
     "import numpy as np\n",
     "from sklearn.mixture import GaussianMixture\n",
     "\n",
-    "# Assuming 'MD_x' is your binary DataFrame\n",
-    "# Specify the number of clusters (K) and the number of repetitions (nrep)\n",
     "K_range = range(2, 9)\n",
     "nrep = 10\n",
     "\n",
@@ -4135,7 +4119,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "fb14c027",
+   "id": "9f93e97c",
    "metadata": {},
    "outputs": [
     {
@@ -4153,8 +4137,6 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from sklearn.mixture import GaussianMixture\n",
-    "\n",
-    "# Assuming 'MD_x' is your binary DataFrame\n",
     "\n",
     "# Specify the range of clusters\n",
     "K_range = range(2, 9)\n",
@@ -4192,7 +4174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "764448ec",
+   "id": "7a3245e4",
    "metadata": {},
    "source": [
     "Information criteria for the mixture models of binary distributions with 2 to 8 components (segments) for the fast food data set\n"
@@ -4201,7 +4183,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a7c10f81",
+   "id": "48fb206d",
    "metadata": {},
    "outputs": [
     {
@@ -4230,10 +4212,6 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.mixture import GaussianMixture\n",
     "\n",
-    "# Assuming 'MD_x' is your binary DataFrame\n",
-    "# Assuming 'MD_k4' is the result from K-means clustering\n",
-    "# Assuming 'optimal_model' is the result from Finite Mixture Model\n",
-    "\n",
     "# Fit K-means model\n",
     "kmeans_model = KMeans(n_clusters=4, random_state=1234)\n",
     "MD_k4_labels = kmeans_model.fit_predict(MD_x)\n",
@@ -4256,7 +4234,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "3f845db7",
+   "id": "a6c45b77",
    "metadata": {},
    "outputs": [
     {
@@ -4271,9 +4249,6 @@
     "from sklearn.mixture import GaussianMixture\n",
     "import numpy as np\n",
     "\n",
-    "# Assuming 'MD_x' is your binary DataFrame\n",
-    "# Assuming 'MD_k4_labels' are the cluster labels from K-means\n",
-    "\n",
     "# Fit Gaussian Mixture Model using the optimal number of clusters\n",
     "optimal_model = GaussianMixture(n_components=4, random_state=1234)\n",
     "optimal_model.fit(MD_x)\n",
@@ -4287,7 +4262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74694771",
+   "id": "3fe51e7e",
    "metadata": {},
    "source": [
     "# Using Mixtures of Regression Models"
@@ -4296,7 +4271,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "f0d046c8",
+   "id": "d9ead9f1",
    "metadata": {},
    "outputs": [
     {
@@ -4321,9 +4296,6 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Assuming 'mcdonalds' is your DataFrame\n",
-    "# Assuming 'Like' is the column you want to get the reversed frequency counts\n",
-    "\n",
     "# Get the frequency counts of unique values in the 'Like' column\n",
     "like_counts = mcdonalds['Like'].value_counts()\n",
     "\n",
@@ -4337,7 +4309,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "fdc48355",
+   "id": "932a9043",
    "metadata": {},
    "outputs": [
     {
@@ -4360,9 +4332,6 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Assuming 'mcdonalds' is your DataFrame\n",
-    "# Assuming 'Like' is the column you want to transform\n",
-    "\n",
     "# Create a new column 'Like_n' by subtracting the numeric values from 6\n",
     "mcdonalds['Like_n'] = 6 - pd.to_numeric(mcdonalds['Like'], errors='coerce')\n",
     "\n",
@@ -4374,7 +4343,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "7d84cea2",
+   "id": "da5d7161",
    "metadata": {},
    "outputs": [
     {
@@ -4395,7 +4364,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "bba5a6f4",
+   "id": "30e2c5a4",
    "metadata": {},
    "outputs": [
     {
@@ -4407,8 +4376,6 @@
     }
    ],
    "source": [
-    "# Assuming 'mcdonalds' is your DataFrame\n",
-    "# Assuming 'Like_n' is the target variable\n",
     "\n",
     "# Extract column names from the first 11 columns\n",
     "columns_to_include = mcdonalds.columns[:11]\n",
@@ -4424,7 +4391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72e1b078",
+   "id": "64856118",
    "metadata": {},
    "source": [
     "\n",
@@ -4434,7 +4401,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "15e9a6df",
+   "id": "a0291214",
    "metadata": {},
    "outputs": [
     {
@@ -4452,8 +4419,6 @@
     "import numpy as np\n",
     "from scipy.cluster.hierarchy import linkage, dendrogram\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Assuming 'MD_x' is your data matrix\n",
     "MD_x_transposed = MD_x.transpose()\n",
     "\n",
     "# Calculate the linkage matrix\n",
@@ -4470,7 +4435,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "7c5612d5",
+   "id": "a07ad580",
    "metadata": {
     "scrolled": true
    },
@@ -4505,7 +4470,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "9ed6e504",
+   "id": "ca518b63",
    "metadata": {},
    "outputs": [
     {
@@ -4534,8 +4499,6 @@
     "import numpy as np\n",
     "from yellowbrick.cluster import KElbowVisualizer\n",
     "\n",
-    "# Assuming 'MD_x' is your data matrix\n",
-    "\n",
     "# Perform PCA\n",
     "pca = PCA(n_components=2)\n",
     "MD_pca = pca.fit_transform(MD_x)\n",
@@ -4549,9 +4512,6 @@
     "scatter = ax.scatter(MD_pca[:, 0], MD_pca[:, 1], c=MD_k4, cmap='viridis', edgecolors='k', s=50)\n",
     "ax.set_xlabel(\"Principal Component 1\")\n",
     "ax.set_ylabel(\"Principal Component 2\")\n",
-    "\n",
-    "# Add scatter points manually (if needed)\n",
-    "# scatter_manual = ax.scatter(...)\n",
     "\n",
     "# Quiver plot for projection axes\n",
     "proj_axes = pca.components_.T\n",
@@ -4567,7 +4527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1caf9b9f",
+   "id": "fc361caf",
    "metadata": {},
    "outputs": [],
    "source": []
